--- a/projects/mario-pest-control/style.css
+++ b/projects/mario-pest-control/style.css
@@ -21,12 +21,12 @@ body {
 
 h1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
     font-size: 50px;
 }
 
 body {
     background: url("mushkingdom\(original\).png") no-repeat center top;
-    color: white;
     text-align: center;
 }
 
@@ -63,14 +63,19 @@ div > p {
     padding: 5px;
     border-style: solid;
     border-radius: 25px;
+    border-width: medium;
     margin-left: 0px;
     width: 220px;
     background-color: red;
 }
+#button:hover {
+    background-color: green;
+}
 
 footer {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     font-style: italic;
     margin-top: 75px;
-    text-shadow: 2px 2px #7e0a0a
+    text-shadow: 1px 1px #ffffff
 }
