--- a/projects/mario-pest-control/style.css
+++ b/projects/mario-pest-control/style.css
@@ -25,6 +25,12 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    margin-bottom: 10px;
+}
+
 body {
     background: url("mushkingdom\(original\).png") no-repeat center top;
     text-align: center;
@@ -70,6 +76,14 @@ div > p {
 }
 #button:hover {
     background-color: green;
+}
+
+#output {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    color: yellow;
+    display: inline-block;
 }
 
 footer {
