--- a/projects/Business Time site/style.css
+++ b/projects/Business Time site/style.css
@@ -2,14 +2,16 @@
   padding: 5px;
   text-align: center;
   font-size: 2em;
-  color: #bb7a03;
   transform: skewX(-20deg);
 }
 
 nav div a {
+  display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  text-decoration: none;
   transform: skewX(20deg);
+  color: #7365c0;
 }
   
 html, body {  
@@ -31,6 +33,11 @@ h1 {
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 150px;
+}
+
+span > a {
+  color: blue;
+  text-decoration: none;
 }
   
 .lorem {
@@ -76,11 +83,36 @@ h1 {
     background: red;
 }
 
+.photos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+
+div > img {
+  height: 900px;
+  width: 1450px;
+}
+
+@media only screen and (max-width: 1250px){
+  div > img {
+    height: 450px;
+    width: 700px;
+  }
+}
+
 @media only screen and (max-width: 710px){
   h1 { 
     font-size: 5em;
     margin-top: 80px; 
  }
+
+ div > img {
+  height: 250px;
+  width: 400px;
+}
+
 }
 
 @media only screen and (max-width: 500px){
@@ -93,4 +125,7 @@ h1 {
   .lorem {
     font-size:larger;
   }
+
 }
+
+
