--- a/projects/Business Time site/style.css
+++ b/projects/Business Time site/style.css
@@ -1,4 +1,17 @@
+.container {
+  display: flex;
+  height: 50px;
+  flex-direction: row; 
+  justify-content: space-evenly;
+  padding: 10px;
+  align-items: center;
+  /* position: fixed; This is to make the bar fixed, but need to restylize with @media
+  margin-top: -120px;
+  width: 90%; */
+} 
+
 .container > div {
+  flex: 1; 
   padding: 5px;
   text-align: center;
   font-size: 2em;
@@ -14,7 +27,7 @@ nav div a {
   color: #7365c0;
 }
   
-html, body {  
+body {  
   background: linear-gradient(
     rgba(0, 0, 0, 0.2),
     rgba(0, 0, 0, 0.2)
@@ -29,7 +42,7 @@ h1 {
   width: auto;
   text-align: left;
   margin-left: 15px;
-  margin-top: 25px;
+  margin-top: 120px;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 150px;
@@ -66,19 +79,6 @@ span > a {
   background-color: #E899D7;
 }
 
-.container {
-        display: flex;
-        height: 50px;
-        flex-direction: row; /* can also be a column and can be reversed - reverse-row */
-        justify-content: space-evenly; /* can also center it with this command */
-        padding: 10px;
-        align-items: center;
-}
-    
-.container > div {
-    flex: 1; 
-}
-
 nav div a:hover {
   background: orange;
 }
@@ -87,7 +87,7 @@ nav div a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 20px;
+  padding: 30px;
 }
 
 div > img {
