--- a/projects/api-project/src/app.css
+++ b/projects/api-project/src/app.css
@@ -50,6 +50,43 @@
     text-decoration: none;
     transform: skewX(-20deg);
   }
+
+  .homeText {
+    color: rgb(232, 142, 142);
+    font-size: 3em;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 15px 50px 15px 50px;
+    text-align: center;
+}
+
+.homeText h2 {
+  margin-left: 230px;
+  margin-right: 200px;
+  font-size: 45px;
+  max-width: 800px;
+}
+
+.searchResults {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 40px;
+  justify-items: center;
+  padding: 1%;
+}
+
+.imgStyle {
+  height: 'auto';
+  max-width: '450px';
+}
+
+.upcoming {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  justify-items: center;
+  padding: 1%;
+}
   
   /* Hover Styles */
   .home:hover {
@@ -62,4 +99,45 @@
 
   .nowPlaying:hover {
     background: orange;
+  }
+
+  @media only screen and (max-width: 750px){
+  
+    .navbar {
+      flex-direction: column;
+      margin-top: 75px;
+      align-items: normal;
+    }
+
+    .homeText {
+      font-size: 2em;
+      margin-top: 80px; 
+      text-align: 'left';
+      padding: 0 0 0 0;
+    }
+
+    .homeText h2 {
+      margin-left: 0px;
+      margin-right: 0px;
+      font-size: 30px;
+      margin-left: 20px;
+      max-width: 500px;
+    }
+
+    .searchResults {
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-items: center;
+      padding: 1%;
+    }
+
+    .upcoming {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+
+    .imgStyle {
+      height: 'auto';
+      max-width: '150px';
+    }
   }
