--- a/projects/api-project/src/app.css
+++ b/projects/api-project/src/app.css
@@ -61,10 +61,7 @@
 }
 
 .homeText h2 {
-  margin-left: 230px;
-  margin-right: 200px;
   font-size: 45px;
-  max-width: 800px;
 }
 
 .searchResults {
@@ -110,18 +107,18 @@
     }
 
     .homeText {
-      font-size: 2em;
+      font-size: 1.25em;
       margin-top: 80px; 
       text-align: 'left';
       padding: 0 0 0 0;
     }
 
     .homeText h2 {
-      margin-left: 0px;
-      margin-right: 0px;
-      font-size: 30px;
-      margin-left: 20px;
-      max-width: 500px;
+      /* margin-left: 0px;
+      margin-right: 0px; */
+      font-size: 25px;
+      /* margin-left: 20px;
+      max-width: 500px; */
     }
 
     .searchResults {
