--- a/projects/api-project/public/index.css
+++ b/projects/api-project/public/index.css
@@ -8,3 +8,18 @@ body {
   margin-right: 25px;
   color: white;
 }
+
+.for-iOS {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ), url("izayah-ramos-778080-unsplash.jpg") no-repeat center;
+}
